--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <button class="btn btn-outline-dark" type="submit">
                             <i class="bi-cart-fill me-1"></i>
                             Carrito
-                            <span class="badge bg-dark text-white ms-1 rounded-pill" id="cartNumber">0</span>
+                            <span class="badge bg-dark text-white ms-1 rounded-pill" id="cartNumber"></span>
                         </button>
                     </form>
                 </div>
@@ -55,13 +55,39 @@
                 </div>
             </div>
         </header>
+
+
+
+
+
+
+
         <!-- Section-->
-        <section class="py-5" id = 420 > 
-            <div class="text-center"><a class="btn btn-primary mt-auto " 
-                onclick= "borrarProductoDelCarrito(); "
-                href="#">Borrar último producto del carrito</a></div>
-            </div>
-        </section>
+
+<section class="py-5" >
+    <div class="container px-4 px-lg-5 mt-5" >
+
+        
+
+        <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center" id="cardContainer">
+
+        </div>
+    </div>
+</section>
+
+        <!-- Section-->
+
+
+
+
+
+
+
+
+
+
+
+
         <!-- Footer-->
         <footer class="py-5 bg-dark">
             <div class="container"><p class="m-0 text-center text-white">Copyright &copy; VILA 2022</p></div>
