--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
 
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+        <!-- Bootstrap core JS-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" defer></script>
+        
+        <script src="//cdn.jsdelivr.net/npm/sweetalert2@11" defer></script>
+        <!-- Core theme JS-->
+        <script src="js/scripts.js" defer></script>
+        
+
     </head>
     <body>
         <!-- Navigation-->
@@ -92,9 +100,7 @@
         <footer class="py-5 bg-dark">
             <div class="container"><p class="m-0 text-center text-white">Copyright &copy; VILA 2022</p></div>
         </footer>
-        <!-- Bootstrap core JS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
+
+
     </body>
 </html>
